prev merge 그리고 백업